--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@supabase/supabase-js": "^2.87.0",
     "expo": "~51.0.0",
     "expo-camera": "~15.0.16",
     "expo-image-picker": "~15.1.0",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.344.0",
     "nativewind": "^4.2.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
