Add Supabase auth integration with real login/signup

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.87.0",
     "expo": "~51.0.0",
     "expo-camera": "~15.0.16",
+    "expo-constants": "~16.0.2",
     "expo-image-picker": "~15.1.0",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
