Add EAS workflow and update configuration

--- a/eas.json
+++ b/eas.json
@@ -7,28 +7,28 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "node": "20.17.0",
+      "node": "20.13.0",
       "env": {
-        "NODE_VERSION": "20.17.0"
+        "NODE_VERSION": "20.13.0"
       }
     },
     "preview": {
       "distribution": "internal",
-      "node": "20.17.0",
+      "node": "20.13.0",
       "env": {
-        "NODE_VERSION": "20.17.0"
+        "NODE_VERSION": "20.13.0"
       }
     },
     "production": {
+      "node": "20.13.0",
       "autoIncrement": true,
-      "node": "20.17.0",
+      "channel": "production",
       "env": {
-        "NODE_VERSION": "20.17.0"
+        "NODE_VERSION": "20.13.0"
       },
       "ios": {
         "simulator": false
-      },
-      "image": "macos-sonoma-14.6-xcode-16.1"
+      }
     }
   },
   "submit": {
