--- a/.eas/workflows/create-production-builds.yml
+++ b/.eas/workflows/create-production-builds.yml
@@ -9,8 +9,10 @@ jobs:
     type: build
     params:
       platform: android
+      profile: production
 
   build_ios:
     type: build
     params:
       platform: ios
+      profile: production
